# asardeuce

./: LICENSE  README.md  pyproject.toml
src/asardeuce/: __init__.py  __main__.py  api.py  filesystem.py  pickle.py
