[project]
name = "asardeuce"
version = "0.1.0"
description = "Python extractor for the ASAR archive format"
readme = "README.md"
authors = [
    { name = "François Poirotte" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.9.2",
]

[project.scripts]
asardeuce = "asardeuce.__main__:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
